Add Eclipse Hawkbit OTA as additional option
This refactors the OTA logic to support Eclipse Hawkbit
as an alternative OTA solution.

It also upgrades the JSON library to 6.x.

--- a/platformio.ini
+++ b/platformio.ini
@@ -77,12 +77,13 @@ lib_deps_sensors =
     BSEC Software Library@1.5.1474
     https://github.com/ricki-z/SDS011.git
 lib_deps_basic =
-    ArduinoJson@^5.13.1
+    ArduinoJson@^6.15.0
     76@>=1.2.4 ; #76 Timezone by Jack Christensen
     274@>=2.3.4 ; #274 RTC by Michael Miller
     SimpleButton
     AXP202X_Library@>=1.1.0 ; AXP202 PMU lib by Lewis He
     esp32-micro-sdcard
+    Eclipse-Hawkbit-OTA-Client=ctron/eclipse-hawkbit-arduino-ota-client#v0.4.1
 lib_deps_all =
     ${common.lib_deps_basic}
     ${common.lib_deps_lora}
