--- a/src/ota.sample.conf
+++ b/src/ota.sample.conf
@@ -6,3 +6,9 @@ OTA_WIFI_PASS = FooBar42!
 BINTRAY_USER = MyBintrayUser
 BINTRAY_REPO = MyBintrayRepo
 BINTRAY_API_TOKEN = 3894a7a51d70c6523c1b7479261c34845ebf7878
+
+[hawkbit]
+HAWKBIT_URL = https://my-hawkbit-url
+HAWKBIT_TENANT = DEFAULT
+HAWKBIT_DEVICE_ID = dev03
+HAWKBIT_DEVICE_TOKEN = 1234
