--- a/src/paxcounter.conf
+++ b/src/paxcounter.conf
@@ -66,11 +66,14 @@
 #define BMECYCLE                        1       // bme sensor read cycle in seconds [default = 1 secs]
 
 // OTA settings
-#define USE_OTA                         1       // set to 0 to disable OTA update
+#define USE_OTA_BINTRAY                 0       // set to 1 to enable OTA updates via Bintray
+#define USE_OTA_HAWKBIT                 0       // set to 1 to enable OTA updates via Eclipse Hawkbit
 #define WIFI_MAX_TRY                    5       // maximum number of wifi connect attempts for OTA update [default = 20]
 #define OTA_MAX_TRY                     5       // maximum number of attempts for OTA download and write to flash [default = 3]
 #define OTA_MIN_BATT                    3600    // minimum battery level for OTA [millivolt]
 #define RESPONSE_TIMEOUT_MS             60000   // firmware binary server connection timeout [milliseconds]
+#define CYCLIC_UPDATE_CHECK             0       // perform a cyclic update check [seconds, default=0]
+#define USE_OTA (USE_OTA_BINTRAY || USE_OTA_HAWKBIT)
 
 // settings for syncing time of node with a time source (network / gps / rtc / timeserver)
 #define TIME_SYNC_LORAWAN               1       // set to 1 to use LORA network as time source, 0 means off [default = 1]
